force-app/main/default/objects/Adoption__c/Adoption__c.object-meta.xml
<CustomObject>
    <description>[Animal Shelter Starter] This object tracks information related to an adoption, related to an animal. Including inspections and contacts.</description>
    <label>Adoption</label>
    <nameField>
        <displayFormat>ADOPT{00000}</displayFormat>
        <label>Adoption ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>