force-app/main/default/objects/Adoption__c/fields/Adoption_Stage__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Stage__c</fullName>
    <inlineHelpText>The current stage of the adoption</inlineHelpText>
    <label>Adoption Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Review</fullName>
                <default>true</default>
                <label>Initial Review</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Home Inspection</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Veterinary Check</fullName>
            </value>
            <value>
                <fullName>Trial Period</fullName>
            </value>
            <value>
                <fullName>Adopted</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>