force-app/main/default/objects/Adoption__c/fields/Current_Daytime_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Current_Daytime_Arrangements__c</fullName>
    <label>Current Daytime Arrangements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>