force-app/main/default/objects/Adoption__c/fields/Date_Collected__c.field-meta.xml
<CustomField>
    <fullName>Date_Collected__c</fullName>
    <inlineHelpText>Date the animal was collected or when it is planned to be collected</inlineHelpText>
    <label>Date Collected</label>
    <type>Date</type>
</CustomField>