force-app/main/default/objects/Adoption__c/fields/Date_of_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Adoption__c</fullName>
    <inlineHelpText>Date which adoption was agreed</inlineHelpText>
    <label>Date of Adoption</label>
    <type>Date</type>
</CustomField>