force-app/main/default/objects/Adoption__c/fields/Date_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Returned__c</fullName>
    <inlineHelpText>Date animal was returned if adoption has been unsuccessful</inlineHelpText>
    <label>Date Returned</label>
    <type>Date</type>
</CustomField>