force-app/main/default/objects/Adoption__c/fields/Has_Local_Vet__c.field-meta.xml
<CustomField>
    <fullName>Has_Local_Vet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the Adopter have a current local Vet?</inlineHelpText>
    <label>Has Local Vet</label>
    <type>Checkbox</type>
</CustomField>