force-app/main/default/objects/Adoption__c/fields/Local_Vet__c.field-meta.xml
<CustomField>
    <fullName>Local_Vet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Vet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Adoptions (Local Vet)</relationshipLabel>
    <relationshipName>Adoptions</relationshipName>
    <type>Lookup</type>
</CustomField>