force-app/main/default/objects/Adoption__c/fields/Location_of_Animal_Daytime__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Animal_Daytime__c</fullName>
    <inlineHelpText>Where will the animal be kept during the day? Is this area suitable for the animal?</inlineHelpText>
    <label>Location of Animal (Daytime)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>