force-app/main/default/objects/Adoption__c/fields/Other_Animals__c.field-meta.xml
<CustomField>
    <fullName>Other_Animals__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the Adopter have other animals?</inlineHelpText>
    <label>Other Animals?</label>
    <type>Checkbox</type>
</CustomField>