force-app/main/default/objects/Adoption__c/fields/Permission_to_House_Animal__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_House_Animal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the adopter is cohabiting, renting, or does not own their accommodation, do they have permission to house an animal, ie from the Landlord?</inlineHelpText>
    <label>Permission to House Animal?</label>
    <type>Checkbox</type>
</CustomField>