force-app/main/default/objects/Adoption__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary contact for this adoption.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Adoptions</relationshipLabel>
    <relationshipName>Adoptions</relationshipName>
    <type>Lookup</type>
</CustomField>