force-app/main/default/objects/Adoption__c/fields/Reason_for_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Adoption__c</fullName>
    <inlineHelpText>Details of why this household wants to adopt and why they want to adopt this animal.</inlineHelpText>
    <label>Reason for Adoption</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>