force-app/main/default/objects/Adoption__c/fields/Returned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Returned_Reason__c</fullName>
    <label>Returned Reason</label>
    <type>TextArea</type>
</CustomField>