force-app/main/default/objects/Adoption__c/fields/Safe_Outside_Area__c.field-meta.xml
<CustomField>
    <fullName>Safe_Outside_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the Adopter&apos;s accommodation have a safe area?</inlineHelpText>
    <label>Safe Outside Area</label>
    <type>Checkbox</type>
</CustomField>