force-app/main/default/objects/Adoption__c/fields/Total_Adults__c.field-meta.xml
<CustomField>
    <fullName>Total_Adults__c</fullName>
    <inlineHelpText>Total number of adults living at the location where the animal where be housed</inlineHelpText>
    <label>Total Adults</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>