force-app/main/default/objects/Adoption__c/fields/Total_Time_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Adoption__c</fullName>
    <formula>IF(ISBLANK(Date_Returned__c),  
TODAY() -  Date_Collected__c, 
IF(OR(Date_Returned__c = Date_Collected__c, Date_Collected__c = TODAY()), 1, 
Date_Returned__c -  Date_Collected__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>