force-app/main/default/objects/Adoption__c/fields/Trial_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Trial_End_Date_Time__c</fullName>
    <inlineHelpText>If this is a trial adoption, then set this to the end date when the trial period is due to end.</inlineHelpText>
    <label>Trial End Date Time</label>
    <type>DateTime</type>
</CustomField>