force-app/main/default/objects/Adoption__c/fields/Type_of_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Accommodation__c</fullName>
    <label>Type of Accommodation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>Flat/Apartment</fullName>
            </value>
            <value>
                <fullName>House - Detached - Rural</fullName>
            </value>
            <value>
                <fullName>House - Detached - Urban</fullName>
            </value>
            <value>
                <fullName>House - Semi-Detached - Rural</fullName>
            </value>
            <value>
                <fullName>House - Semi-Detached - Urban</fullName>
            </value>
            <value>
                <fullName>Temporary Accommodation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>